Updates to .gitignore

--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "babel-cli": "^6.26.0",
     "chai": "^4.2.0",
+    "csv-parser": "^2.2.0",
     "d3": "^5.9.2",
+    "fs": "0.0.1-security",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
+    "request": "^2.88.0",
     "webpack": "^4.30.0",
     "webpack-dev-server": "^3.3.1"
   },
