--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "csv-parser": "^2.2.0",
     "d3": "^5.9.2",
     "fs": "0.0.1-security",
-    "lodash": "^4.17.11",
-    "react": "^16.8.6",
+    "lodash": "^4.17.15",
+    "react": "^16.9.0",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.8.4",
     "react-redux": "^7.0.3",
+    "react-use-dimensions": "^1.2.1",
     "redux": "^4.0.1",
     "request": "^2.88.0",
     "webpack": "^4.30.0",
