--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "babel-cli": "^6.26.0",
-    "chai": "^4.2.0",
     "csv-parser": "^2.2.0",
     "d3": "^5.9.2",
     "fs": "0.0.1-security",
@@ -25,7 +24,8 @@
     "redux": "^4.0.1",
     "request": "^2.88.0",
     "webpack": "^4.30.0",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-server": "^3.3.1",
+    "chai": "^4.2.0"
   },
   "private": true,
   "devDependencies": {
