--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^3.2.0",
     "csv-loader": "^3.0.2",
     "gh-pages": "^2.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "papaparse": "^5.0.2",
+    "style-loader": "^1.0.0",
     "webpack-cli": "^3.3.2"
   }
 }
